<resources>
    <string name="app_name">Zoy7Professional</string>
    <string name="splash_text"> Lorem Ipsum is simply dummy text of the \nprinting and typesetting industry. Lorem \nIpsum has been the industry\'s </string>
    <string name="mobile_number">Mobile Number</string>
    <string name="get_otp"> Get OTP </string>
    <string name="didn_t_receive_otp">Don\'t receive the otp? <font fgcolor='#CC1274B5'>RESEND OTP</font></string>
    <string name="verify">Verify</string>
    <string name="i_agree_terms"> I agree and <font fgcolor='#CC1274B5'>terms &amp; conditions</font></string>
    <string name="otp_verification">OTP Verification</string>
    <string name="nav_home">Home</string>
    <string name="nav_booking">My Booking History</string>
    <string name="nav_refer">Refer and Earn</string>
    <string name="nav_notification">Notifications</string>
    <string name="nav_wallet">My Wallet</string>
    <string name="nav_change">Change Password</string>
    <string name="nav_help">Help</string>
    <string name="nav_terms_policy">Policy Policy</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_service">Services</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="nav_rewards">Rewards</string>
    <string name="nav_appointment">Appointment</string>
    <string name="nav_profile">Profile</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="mobile">Mobile No.</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="state_city">State City</string>
    <string name="address">Address*</string>
    <string name="addresssys">Address:</string>
    <string name="pincode">Pincode</string>
    <string name="paymentStatus">Payment Status :</string>
    <string name="text_with_bullet"> \u25CF</string>

    <string name="choose_image_source">Choose Image Resource</string>
    <string name="no_app_for_action">No app found to perform this action</string>
    <string name="write_permission">Write External storage Permission not specified</string>
    <string name="unable_to_load_image">Unable to load image</string>

    <string name="update">Update</string>
    <string name="mobilesys">Mobile Number :</string>
    <string name="turn_on_internet_and_click_here">Turn On Internet And Click Here</string>
    <string name="search_for_society_landmark_locality">Search for society, landmark locality....</string>
    <string name="eg_netaji_marg_sector_18">eg. NETAJI MARG SECTOR 18</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_state">State City</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_booking_history">My booking history</string>
    <string name="add_money_to">Add Money to</string>
    <string name="my_wallet">MY WALLET</string>
    <string name="my_walet">My Wallet</string>
    <string name="proceed_to_add_money">Proceed to add money</string>
    <string name="done">Done</string>
    <string name="your_cancel_request_has_been_updated">Your cancel request has been updated !</string>
    <string name="cancel_request_n_updated">Cancel Request \n updated</string>
    <string name="ongoing">Ongoing</string>
    <string name="deduct_charges_from_wallet_for_cod">Deduct charges from wallet For COD</string>
    <string name="accept">Accept</string>
    <string name="pending">Pending</string>
    <string name="request_cancel">Request Cancel</string>
    <string name="cancel_policy">Cancel Policy</string>
    <string name="submit">Submit</string>
    <string name="more">More</string>
    <string name="comments">Comments</string>
    <string name="applicable_on_all_services">Applicable on all services</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_details">Add Details</string>
    <string name="completed">Completed</string>
    <string name="add_money">Add Money</string>
    <string name="wallet_history">Wallet History</string>
    <string name="skills">Skills</string>
    <string name="select_professional_skills">Select Professional Skills</string>
    <string name="sava">Save</string>
    <string name="my_request">My Request</string>
    <string name="details">Details</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>


    <string-array name="reason">
        <item>Reason for cancel</item>
    </string-array>

    <string-array name="choose">
        <item>Choose State</item>
    </string-array>
    <string-array name="city">
        <item>Choose City</item>
    </string-array>


</resources>