<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">


            <TextView
                android:id="@+id/tx1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/cancel_request_n_updated"
                android:textAlignment="center"
                android:textColor="@color/blue_700"
                android:textSize="21dp"
                android:textStyle="bold" />


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loti_animation"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/tx1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="right.json"
                app:lottie_loop="true" />

            <TextView
                android:id="@+id/tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loti_animation"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/your_cancel_request_has_been_updated"
                android:textAlignment="center"
                android:textSize="14sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btDone"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_below="@+id/tx"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/done"
                android:textSize="13sp"
                app:cornerRadius="15dp" />


        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>